[package]
name = "recursive_disassembler"
version = "2.1.2"
authors = ["coco <coco@hexgolems.com>"]

description = "A simple recursive disassembler based on capstone"
keywords = ["disassembler","recursive", "capstone", "x86"]
license-file = "LICENSE"
repository = "https://github.com/eqv/recursive_disassembler"

[dependencies]
capstone="~0.0.6"
lazy_static = "~0.2.8"
regex = "~0.2.2"
